<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.shopsy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.shopsy.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_navigation_gallery_to_galleryDetailFragment"
            app:destination="@id/galleryDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_todo_list"
        android:name="com.example.shopsy.ui.todoList.TodoListFragment"
        android:label="@string/title_todo_list"
        tools:layout="@layout/fragment_todo_list" />
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.shopsy.ui.productDetail.ProductDetailFragment"
        android:label="@string/product_detail"
        tools:layout="@layout/fragment_product_detail" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/galleryDetailFragment"
        android:name="com.example.shopsy.ui.galleryDetail.GalleryDetailFragment"
        android:label="@string/gallery_detail"
        tools:layout="@layout/fragment_gallery_detail" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
</navigation>